@@ -1,3 +1,11 @@
+Fri Feb  8 17:46:41 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/workers/CPU/CPU_Worker_T.h:
+        * cuts/workers/CPU/CPU_Worker_T.cpp:
+
+          Changed consts to command line arguments.  Default values
+          are what the consts previously were.
+
 Mon Jan 14 16:01:48 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/workers/CPU/CPU_Worker_T.h:
